# algoshort

./: .gitignore  1_test_package copy 2.ipynb  1_test_package copy 3.ipynb  1_test_package copy 4.ipynb  1_test_package copy.ipynb  1_test_package.ipynb  CHANGELOG.md  Chapter 8.ipynb  DEVILS_ADVOCATE_REVIEW_stop_loss.md  EXPLOITATION_SCENARIOS.md  FTSEMIB.MI.xlsx  GDAXI.xlsx  LICENSE  code.py  config.json  dependencies.py  folder_structure.py  genrelangchain_ex (1).py  genrelangchain_expert.py  output.xlsx  position_sizing_old.py  prova.ipynb  ps.xlsx  pyproject.toml  requirements.txt  results analysis.md  results_analysis_algoshortyfinance_handler.md  results_analysis_ohlcprocessor.md  results_analysis_optimizer.md  results_analysis_plots.md  results_analysis_position_sizing.md  results_analysis_returns.md  results_analysis_stop_loss.md  rrg.xlsx  segment_-1_rrg_atr_output.xlsx  segment_0_rrg_atr_output.xlsx  segment_1_rrg_atr_output.xlsx  segment_2_rrg_atr_output.xlsx  segment_3_rrg_atr_output.xlsx  segment_4_rrg_atr_output.xlsx  (+13 more)
algoshort/: __init__.py  combiner.py  ohlcprocessor.py  optimizer.py  parallel_grid_search.py  plots.py  position_sizing.py  regime_bo.py  regime_fc.py  regime_ma.py  returns.py  signals.py  stop_loss.py  strategy_metrics.py  trading_summary.py  utils.py  wrappers.py  yfinance_handler.py
data/: A2A.MI.txt
docs/: YFinanceDataHandler_documentation.md
notebooks/: combiner_guide.ipynb  optimizer_guide.ipynb  position_sizing_guide.ipynb  regimes_guide.ipynb  trading_summary_guide.ipynb  yfinance_handler_guide.ipynb
tests/: conftest.py  (+10 more)
(+14 files in other folders)
