[project]
name = "algoshort"
version = "0.1.0"
description = "A package for processing financial data"
authors = [{ name = "Luigi", email = "luigi@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.10.6,<4.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "pandas>=1.5",
    "scipy (>=1.16.1,<2.0.0)",
    "yfinance (>=0.2.65,<0.3.0)"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
